--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
     <link rel="icon" type="image/x-icon" href="./images/programador.png">
     <!-- Bootstrap CSS offline -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap Icons offline -->
+    <link href="./icons/bootstrap-icons.css" rel="stylesheet">
     <!-- Bootstrap CSS online -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
+    <!-- Bootstrap Icons online -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"> -->
     <!-- My CSS -->
     <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
     <!-- NavBar -->
-    <div class="text-bg-secondary p-3">
-    <nav class="navbar navbar-expand-md navbar-light" >
+    <nav class="navbar navbar-expand-md navbar-light">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbar-toggler"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -48,47 +51,175 @@
             </div>
         </div>
     </nav>
-    </div>
+    
     <!-- Me -->
     <section class="myclass aling-items-stretch">
         <div class="myclass-main d-flex flex-column justify-content-center aling-items-center">
             <img class="myclass-pic rounded-circle" src="./images/logo.png" alt="My selfie">
-            <h1>Mi nombre es german luis cruz martinez</h1>
+            <h1>Hi, I'm German</h1>
             <h2>El Debeloperrr 😎</h2>
+        </div>
+        <div class="myclass-label">            
+            <img class="myclass-imagen img-fluid" src="./images/undraw_code_thinking.svg" alt="think twice code once">
         </div>
     </section>
 
+    <!-- About me -->
+    <section class="about-me section-oscura">
+        <div class="contenedor">
+            <h2 class="seccion-titulo">Conoce a Solrac</h2>
+            <p class="seccion-texto">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere quod, dolorum rerum quas dolorem obcaecati eos nobis id. Quidem ea soluta necessitatibus nobis iure aspernatur ratione porro qui delectus odit.
+            </p>
+        </div>
+    </section>
+
+    <!-- Experience -->
+    <section class="experiencia section-clara">
+        <div class="container text-center">
+            <div class="row">
+                <!-- Programming -->
+                <div class="experiencia-columna col-12 col-md-4">                    
+                    <p class="columna experiencia-title">Programming</p>                    
+                    <i class="bi-braces"></i>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque enim maiores deserunt aliquam facere. 
+                    </p>
+                    <div class="badge-contenedor">                        
+                        <span class="badge bg-primary">PHP</span>
+                        <span class="badge bg-primary">C</span>
+                        <span class="badge bg-primary">Java</span>                        
+                    </div>
+                </div>
+                <!-- Design -->
+                <div class="experiencia-columna col-12 col-md-4">                    
+                    <p class="columna experiencia-title">Design</p>
+                    <i class="bi-window-desktop"></i>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque enim maiores deserunt aliquam facere. 
+                    </p>
+                    <div class="badge-contenedor">                        
+                        <span class="badge bg-primary">UX</span>                        
+                        <span class="badge bg-primary">Usability</span>
+                        <span class="badge bg-primary">UI</span>                        
+                    </div>
+                </div>
+                <!-- Management -->
+                <div class="experiencia-columna col-12 col-md-4">
+                    <p class="columna experiencia-title">Management</p>
+                    <i class="bi-person-gear"></i>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque enim maiores deserunt aliquam facere. 
+                    </p>
+                    <div class="badge-contenedor">                        
+                        <span class="badge bg-primary">Scrum</span>                        
+                        <span class="badge bg-primary">Trello</span>
+                        <span class="badge bg-primary">MVC</span>                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects -->
+    <section class="proyectos section-clara d-flex flex-column">
+        <h2 class="seccion-titulo">Mis Proyectos</h2>
+        <h3 class="seccion-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
+        <!-- gallery -->
+        <div class="container text-center proyectos-contenedor">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="proyecto">
+                        <img src="./images/pro1.jpg" alt="Project 1">
+                        <div class="overlay">
+                            <p>Mi primera chamba</p>
+                            <div class="icons-project">
+                                <a href="" target="_blank" rel="noopener noreferrer">
+                                    <i class="bi-github"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="proyecto">
+                        <img src="./images/pro2.png" alt="Project 1">
+                        <div class="overlay">
+                            <p>Mi primera chamba</p>
+                            <div class="icons-project">
+                                <a href="" target="_blank" rel="noopener noreferrer">
+                                    <i class="bi-github"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="proyecto">
+                        <img src="./images/pro3.jpeg" alt="Project 1">
+                        <div class="overlay">
+                            <p>Mi primera chamba</p>
+                            <div class="icons-project">
+                                <a href="" target="_blank" rel="noopener noreferrer">
+                                    <i class="bi-github"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="proyecto">
+                        <img src="./images/pro4.png" alt="Project 1">
+                        <div class="overlay">
+                            <p>Mi primera chamba</p>
+                            <div class="icons-project">
+                                <a href="" target="_blank" rel="noopener noreferrer">
+                                    <i class="bi-github"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="proyecto">
+                        <img src="./images/pro5.jpg" alt="Project 1">
+                        <div class="overlay">
+                            <p>Mi primera chamba</p>
+                            <div class="icons-project">
+                                <a href="" target="_blank" rel="noopener noreferrer">
+                                    <i class="bi-github"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="proyecto">
+                        <img src="./images/pro6.jpg" alt="Project 1">
+                        <div class="overlay">
+                            <p>Mi primera chamba</p>
+                            <div class="icons-project">
+                                <a href="" target="_blank" rel="noopener noreferrer">
+                                    <i class="bi-github"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <a href="" target="_blank" rel="noopener noreferrer"></a>
+            <button type="button" class="btn btn-info">Más chambas
+                <i class="bi-arrow-right-circle"></i>
+            </button>
+        </a>
+    </section>
+
     <!-- Bootstrap JS offline -->
-    <script src="./js/bootstrap.min.js"></script>  
+    <script src="./js/bootstrap.min.js"></script>    
     <!-- Bootstrap JS online -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script> -->
     <!-- My JS -->
     <script src="./js/main.js"></script>    
 </body>
-
-<footer class="text-bg-dark p-3" id="footer">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <h3>Enlaces</h3>
-          <ul>
-           <span class="ion-logo-facebook"></span>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Acerca de</a></li>
-            <li><a href="#">Contacto</a></li>
-          </ul>
-        </div>
-        <div class="col-lg-4">
-          <h3>Contacto</h3>
-          <p>Correo electrónico: info@example.com</p>
-          <p>Teléfono: 123-456-7890</p>
-        </div>
-        <div class="col-lg-4">
-          <h3>Derechos de autor</h3>
-          <p>(c) 2023 Mi Sitio Web. Todos los derechos reservados.</p>
-        </div>
-      </div>
-    </div>
-  </footer>
-  
 </html>
