--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
     <!-- Projects -->
     <section class="proyectos section-clara d-flex flex-column">
         <h2 class="seccion-titulo">Mis Proyectos</h2>
-        <h3 class="seccion-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
+        <h3 class="seccion-descripcion">Durante mi estadia en la universidad del mar he podido crear proyectos en diferentes 
+            lenguages de programacion</h3>
         <!-- gallery -->
         <div class="container text-center proyectos-contenedor">
             <div class="row">
@@ -132,7 +133,7 @@
                     <div class="proyecto">
                         <img src="./images/pro1.jpg" alt="Project 1">
                         <div class="overlay">
-                            <p>Mi primera chamba</p>
+                            <p>Control contable</p>
                             <div class="icons-project">
                                 <a href="" target="_blank" rel="noopener noreferrer">
                                     <i class="bi-github"></i>
@@ -145,7 +146,7 @@
                     <div class="proyecto">
                         <img src="./images/pro2.png" alt="Project 1">
                         <div class="overlay">
-                            <p>Mi primera chamba</p>
+                            <p>SIGESTOR</p>
                             <div class="icons-project">
                                 <a href="" target="_blank" rel="noopener noreferrer">
                                     <i class="bi-github"></i>
@@ -158,7 +159,7 @@
                     <div class="proyecto">
                         <img src="./images/pro3.jpeg" alt="Project 1">
                         <div class="overlay">
-                            <p>Mi primera chamba</p>
+                            <p>Biblioteca</p>
                             <div class="icons-project">
                                 <a href="" target="_blank" rel="noopener noreferrer">
                                     <i class="bi-github"></i>
@@ -171,7 +172,7 @@
                     <div class="proyecto">
                         <img src="./images/pro4.png" alt="Project 1">
                         <div class="overlay">
-                            <p>Mi primera chamba</p>
+                            <p>Piano</p>
                             <div class="icons-project">
                                 <a href="" target="_blank" rel="noopener noreferrer">
                                     <i class="bi-github"></i>
@@ -184,7 +185,7 @@
                     <div class="proyecto">
                         <img src="./images/pro5.jpg" alt="Project 1">
                         <div class="overlay">
-                            <p>Mi primera chamba</p>
+                            <p>PacMan</p>
                             <div class="icons-project">
                                 <a href="" target="_blank" rel="noopener noreferrer">
                                     <i class="bi-github"></i>
@@ -197,7 +198,7 @@
                     <div class="proyecto">
                         <img src="./images/pro6.jpg" alt="Project 1">
                         <div class="overlay">
-                            <p>Mi primera chamba</p>
+                            <p>Juego en C</p>
                             <div class="icons-project">
                                 <a href="" target="_blank" rel="noopener noreferrer">
                                     <i class="bi-github"></i>
