--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
     <!-- Projects -->
     <section class="proyectos section-clara d-flex flex-column">
         <h2 class="seccion-titulo">Mis Proyectos</h2>
-        <h3 class="seccion-descripcion">Durante mi estadia en la universidad del mar he podido crear proyectos en diferentes 
-            lenguages de programacion</h3>
+        <h3 class="seccion-descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. </h3>
         <!-- gallery -->
         <div class="container text-center proyectos-contenedor">
             <div class="row">
@@ -133,7 +132,7 @@
                     <div class="proyecto">
                         <img src="./images/pro1.jpg" alt="Project 1">
                         <div class="overlay">
-                            <p>Control contable</p>
+                            <p>Mi primera chamba</p>
                             <div class="icons-project">
                                 <a href="" target="_blank" rel="noopener noreferrer">
                                     <i class="bi-github"></i>
@@ -146,7 +145,7 @@
                     <div class="proyecto">
                         <img src="./images/pro2.png" alt="Project 1">
                         <div class="overlay">
-                            <p>SIGESTOR</p>
+                            <p>Mi primera chamba</p>
                             <div class="icons-project">
                                 <a href="" target="_blank" rel="noopener noreferrer">
                                     <i class="bi-github"></i>
@@ -159,7 +158,7 @@
                     <div class="proyecto">
                         <img src="./images/pro3.jpeg" alt="Project 1">
                         <div class="overlay">
-                            <p>Biblioteca</p>
+                            <p>Mi primera chamba</p>
                             <div class="icons-project">
                                 <a href="" target="_blank" rel="noopener noreferrer">
                                     <i class="bi-github"></i>
@@ -172,7 +171,7 @@
                     <div class="proyecto">
                         <img src="./images/pro4.png" alt="Project 1">
                         <div class="overlay">
-                            <p>Piano</p>
+                            <p>Mi primera chamba</p>
                             <div class="icons-project">
                                 <a href="" target="_blank" rel="noopener noreferrer">
                                     <i class="bi-github"></i>
@@ -185,7 +184,7 @@
                     <div class="proyecto">
                         <img src="./images/pro5.jpg" alt="Project 1">
                         <div class="overlay">
-                            <p>PacMan</p>
+                            <p>Mi primera chamba</p>
                             <div class="icons-project">
                                 <a href="" target="_blank" rel="noopener noreferrer">
                                     <i class="bi-github"></i>
@@ -198,7 +197,7 @@
                     <div class="proyecto">
                         <img src="./images/pro6.jpg" alt="Project 1">
                         <div class="overlay">
-                            <p>Juego en C</p>
+                            <p>Mi primera chamba</p>
                             <div class="icons-project">
                                 <a href="" target="_blank" rel="noopener noreferrer">
                                     <i class="bi-github"></i>
