--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Title -->
     <title>My Profile</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="./images/programador.png">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <!-- Bootstrap CSS offline -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap Icons offline -->
@@ -32,7 +32,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbar-toggler">
                 <a class="navbar-brand" href="#">
-                    <img src="./images/programador.png" width="50" alt="My logo">
+                    <img src="./images/favicon.png" width="50" alt="My logo">
                 </a>
                 <ul class="navbar-nav d-flex justify-content-center aling-items-center">
                     <li class="nav-item">
@@ -55,8 +55,8 @@
     <!-- Me -->
     <section class="myclass aling-items-stretch">
         <div class="myclass-main d-flex flex-column justify-content-center aling-items-center">
-            <img class="myclass-pic rounded-circle" src="./images/logo.png" alt="My selfie">
-            <h1>Hi, I'm German</h1>
+            <img class="myclass-pic rounded-circle" src="./images/favicon.png" alt="My selfie">
+            <h1>Hi, I'm Solrac</h1>
             <h2>El Debeloperrr 😎</h2>
         </div>
         <div class="myclass-label">            
