--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                     <p style="font-family: 'Architects Daughter', cursive;
                     font-family: 'Dhurjati', sans-serif;
                     font-family: 'Saira Extra Condensed', sans-serif;">
-                        Tengo conocimiento basico y algo evanzado en los siguentes lenguajes de programacion ya que
-                        durante la estadia en la escuela he trabajado distintos proyectos en distintos lenguajesde
-                        programacion
+                        Tengo conocimiento básico y algo avanzado en los siguientes lenguajes de programación ya que
+                        durante la estadía en la escuela he trabajado distintos proyectos en distintos lenguajes de
+                        programación.
                     </p>
                     <div class="badge-contenedor">
                         <span class="badge bg-primary">Visual Basic</span>
@@ -115,8 +115,9 @@
                     <p style="font-family: 'Architects Daughter', cursive;
                     font-family: 'Dhurjati', sans-serif;
                     font-family: 'Saira Extra Condensed', sans-serif;">
-                        Los editores de texto son una heramienta esencial para todo desarollador a la hora de trabajar
+                        Los editores de texto son una herramienta esencial para todo desarrollador a la hora de trabajar
                         con código, haciendo más fácil su trabajo y aumentando su productividad
+
                     </p>
                     <div class="badge-contenedor">
                         <span class="badge bg-primary">Notepad++</span>
@@ -132,8 +133,9 @@
                     <p style="font-family: 'Architects Daughter', cursive;
                     font-family: 'Dhurjati', sans-serif;
                     font-family: 'Saira Extra Condensed', sans-serif;">
-                        Uno de las heramientas que todo programador debe de tener es un control de versiones, ya que con
-                        el podra controlar las versiones de su proyecto y asi evitar perdidas o confucion, ademas con
+                        Uno de las herramientas que todo programador debe de tener es un control de versiones, ya que
+                        con
+                        el podrá controlar las versiones de su proyecto y así evitar pérdidas o confusión, además con
                         esto le permite trabajar con muchos compañeros en un solo proyecto.
                     </p>
                     <div class="badge-contenedor">
@@ -148,8 +150,8 @@
     <!-- Projects -->
     <section class="proyectos section-clara d-flex flex-column">
         <h2 class="seccion-titulo">Mis Proyectos</h2>
-        <h3 class="seccion-descripcion">Durante mi estadia en la universidad he creado diferentes proyectos en
-            diferentes lenguajes de programacion.</h3>
+        <h3 class="seccion-descripcion">Durante mi estadía en la universidad he creado diferentes proyectos en
+            diferentes lenguajes de programación.</h3>
         <!-- gallery -->
         <div class="container text-center proyectos-contenedor">
             <div class="row">
@@ -201,7 +203,8 @@
                         <div class="overlay">
                             <p>Programa contable</p>
                             <div class="icons-project">
-                                <a href="https://github.com/german-Luis/Contabilidad" target="_blank" rel="noopener noreferrer">
+                                <a href="https://github.com/german-Luis/Contabilidad" target="_blank"
+                                    rel="noopener noreferrer">
                                     <i class="bi-github"></i>
                                 </a>
                             </div>
@@ -228,7 +231,8 @@
                         <div class="overlay">
                             <p>Piano dijital</p>
                             <div class="icons-project">
-                                <a href="https://github.com/german-Luis/PianoDijital" target="_blank" rel="noopener noreferrer">
+                                <a href="https://github.com/german-Luis/PianoDijital" target="_blank"
+                                    rel="noopener noreferrer">
                                     <i class="bi-github"></i>
                                 </a>
                             </div>
@@ -273,17 +277,14 @@
             </ul>
         </div>
         <a href="" target="_blank" rel="noopener noreferrer"></a>
-        <button type="button" class="btn btn-info">Más tips
-            <i class="bi-arrow-right-circle"></i>
-        </button>
         </a>
     </section>
 
     <!-- Recomendaciones -->
     <section class="recomendaciones section-clara">
         <h2 class="seccion-titulo">Recomendaciones</h2>
-        <h3 class="seccion-descripcion">Durante mis proyectos y estadias he conocido y trabajado con grandes hombres que
-            la cual han tenido una buena reconedacion acerca de mi persona </h3>
+        <h3 class="seccion-descripcion">Durante mis proyectos y estadías he conocido y trabajado con grandes hombres que
+            la cual han tenido una buena recomendación acerca de mi persona.</h3>
         <div id="recomendaciones" class="carousel carousel-dark slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#recomendaciones" data-bs-slide-to="0" class="active"
@@ -297,7 +298,8 @@
                 <div class="carousel-item active">
                     <div class="container">
                         <img src="./images/jony.jpg" class="recomendacion-imagen rounded-circle" alt="...">
-                        <p class="recomendacion-texto">Recomiendo al chavo ya que ha hecho unos grandes proyectos</p>
+                        <p class="recomendacion-texto">Recomiendo al licenciado en el área de programación ya que es su
+                            fuerte.</p>
                         <div class="recomendacion-info">
                             <p class="amigo">Jonathan</p>
                             <p class="cargo">Licenciado en Informatica</p>
@@ -306,22 +308,25 @@
                 </div>
                 <div class="carousel-item">
                     <div class="container">
-                        <img src="./images/eder.jpg" class="recomendacion-imagen rounded-circle" alt="...">
-                        <p class="recomendacion-texto"> Lo mismo que dijo jony</p>
+                        <img src="./images/eder2.jpg" class="recomendacion-imagen rounded-circle" alt="...">
+                        <p class="recomendacion-texto"> Recomiendo al licenciado en el área de programación y
+                            Electrónica.</p>
                         <div class="recomendacion-info">
                             <p class="amigo">Eder</p>
-                            <p class="cargo">Jefe de programadores de Amazon</p>
+                            <p class="cargo">Licenciado en Informatica</p>
 
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="container">
-                        <img src="./images/hernan.jpg" class="recomendacion-imagen rounded-circle" alt="...">
-                        <p class="recomendacion-texto">Lo mismo que dijo jony</p>
+                        <img src="./images/hernan.png" class="recomendacion-imagen rounded-circle" alt="...">
+                        <p class="recomendacion-texto">Recomiendo al licenciado el área de programación ya que es su
+                            fuerte y además en los temas que le gusta trata de investigar lo más que se pueda sobre el
+                            tema</p>
                         <div class="recomendacion-info">
                             <p class="amigo">Hernan</p>
-                            <p class="cargo">Gerente de Maicrosoft</p>
+                            <p class="cargo">Licenciado en Informatica</p>
                         </div>
                     </div>
                 </div>
@@ -353,9 +358,10 @@
                 <div class="col-xs-12 col-md-6 text-white">
                     <h6 class="text-white lead">ENCUENTRANOS EN LAS REDES</h6>
                     <div class="redes-footer">
-                        <a href="https://www.facebook.com/profile.php?id=100027177198504"><img src="/images/facebook.png"></a>
-                      <!--  <a href="https://twitter.com/"><img src="/images/twitter.png"></a>
-                        <a href="https://www.youtube.com/"><img src="/images/youtube.png"></a>--> 
+                        <a href="https://www.facebook.com/profile.php?id=100027177198504"><img
+                                src="/images/facebook.png"></a>
+                        <!--  <a href="https://twitter.com/"><img src="/images/twitter.png"></a>
+                        <a href="https://www.youtube.com/"><img src="/images/youtube.png"></a>-->
                     </div>
                     <p class="text-white small">German Luis,Perfil@2023.<br> Todos los derechos reservados.
                     </p>
